[gd_scene load_steps=7 format=3 uid="uid://bpjl1jlgqewel"]

[ext_resource type="Script" path="res://Nodes/hkbR/Scripts/hkbRigidBodyRagdollControlsModifierScene.gd" id="1_gh5r8"]
[ext_resource type="Texture2D" uid="uid://dtc4ja5slmyqt" path="res://Resources/Icons/ConfirmDeleteButton.png" id="2_ebjkq"]
[ext_resource type="Texture2D" uid="uid://csneaifgmkfng" path="res://Resources/Icons/PaintButtonAlpha.png" id="3_wy5gx"]
[ext_resource type="Texture2D" uid="uid://bh1i3gursfdn1" path="res://Resources/Icons/PinButtonAlpha.png" id="4_tnwut"]
[ext_resource type="Texture2D" uid="uid://b3jqrjqx6enly" path="res://Resources/Icons/UnpinButtonAlpha.png" id="5_l7m8u"]
[ext_resource type="Texture2D" uid="uid://jrafqhji2unw" path="res://Resources/Icons/DeleteButton.png" id="5_u1d5a"]

[node name="hkbRigidBodyRagdollControlsModifier" type="GraphNode"]
offset_right = 360.0
offset_bottom = 180.0
title = "hkbRigidBodyRagdollControlsModifier"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_gh5r8")

[node name="connection" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="connectionLabel" type="Label" parent="connection"]
layout_mode = 2
text = "connection
"

[node name="Space" type="Control" parent="connection"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="EditButton" type="Button" parent="connection"]
layout_mode = 2
text = "Edit"

[node name="variableBindingSet" type="Label" parent="."]
layout_mode = 2
text = "variableBindingSet"
horizontal_alignment = 2

[node name="bones" type="Label" parent="."]
layout_mode = 2
text = "bones"
horizontal_alignment = 2

[node name="Name" type="LineEdit" parent="."]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
text = "RigidBodyRagdollControlsModifier"
placeholder_text = "Name"

[node name="DataPopupPanel" type="PopupPanel" parent="."]
transparent_bg = true
initial_position = 1
size = Vector2i(674, 601)
borderless = false

[node name="VBoxContainer" type="VBoxContainer" parent="DataPopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 670.0
offset_bottom = 597.0

[node name="BaseNode" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ConfirmDeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
visible = false
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_ebjkq")

[node name="baseNodeLabel" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "   hkbRigidBodyRagdollControlsModifier"
vertical_alignment = 2

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="baseNodeLabel2" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "#"
vertical_alignment = 1

[node name="nodeIDSpinBox" type="SpinBox" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = 90.0
max_value = 9999.0
value = 90.0
rounded = true

[node name="PaintButton" type="Button" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
text = "      "

[node name="BrushIcon" type="TextureRect" parent="DataPopupPanel/VBoxContainer/BaseNode/PaintButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -15.5
offset_right = 23.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_wy5gx")
stretch_mode = 2

[node name="PinButton" type="Button" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
text = "      "

[node name="PinIcon" type="TextureRect" parent="DataPopupPanel/VBoxContainer/BaseNode/PinButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -15.5
offset_right = 23.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_tnwut")
stretch_mode = 2

[node name="UnpinIcon" type="TextureRect" parent="DataPopupPanel/VBoxContainer/BaseNode/PinButton"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -15.5
offset_right = 23.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_l7m8u")
stretch_mode = 2

[node name="DeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_u1d5a")

[node name="PanelContainer" type="PanelContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="FoldingPanel" type="VBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="userData" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData"]
layout_mode = 2
text = "   userData"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="userDataButton" type="OptionButton" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "0"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3

[node name="enable" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable"]
layout_mode = 2
text = "   enable"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="enableButton" type="OptionButton" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "False"
popup/item_0/id = 0
popup/item_1/text = "True"
popup/item_1/id = 1

[node name="hierarchyGain" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/hierarchyGain"]
layout_mode = 2
text = "   hierarchyGain"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/hierarchyGain"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="hierarchyGainLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/hierarchyGain"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
placeholder_text = "0.0"
alignment = 2
max_length = 20

[node name="velocityDamping" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/velocityDamping"]
layout_mode = 2
text = "   velocityDamping"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/velocityDamping"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="velocityDampingLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/velocityDamping"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
placeholder_text = "0.0"
alignment = 2
max_length = 20

[node name="accelerationGain" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/accelerationGain"]
layout_mode = 2
text = "   accelerationGain"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/accelerationGain"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="accelerationGainLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/accelerationGain"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
placeholder_text = "0.0"
alignment = 2
max_length = 20

[node name="velocityGain" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/velocityGain"]
layout_mode = 2
text = "   velocityGain"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/velocityGain"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="velocityGainLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/velocityGain"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
placeholder_text = "0.0"
alignment = 2
max_length = 20

[node name="positionGain" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/positionGain"]
layout_mode = 2
text = "   positionGain"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/positionGain"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="positionGainLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/positionGain"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
placeholder_text = "0.0"
alignment = 2
max_length = 20

[node name="positionMaxLinearVelocity" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/positionMaxLinearVelocity"]
layout_mode = 2
text = "   positionMaxLinearVelocity"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/positionMaxLinearVelocity"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="positionMaxLinearVelocityLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/positionMaxLinearVelocity"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
placeholder_text = "0.0"
alignment = 2
max_length = 20

[node name="positionMaxAngularVelocity" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/positionMaxAngularVelocity"]
layout_mode = 2
text = "   positionMaxAngularVelocity"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/positionMaxAngularVelocity"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="positionMaxAngularVelocityLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/positionMaxAngularVelocity"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
placeholder_text = "0.0"
alignment = 2
max_length = 20

[node name="snapGain" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapGain"]
layout_mode = 2
text = "   snapGain"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapGain"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="snapGainLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapGain"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
placeholder_text = "0.0"
alignment = 2
max_length = 20

[node name="snapMaxLinearVelocity" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxLinearVelocity"]
layout_mode = 2
text = "   snapMaxLinearVelocity"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxLinearVelocity"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="snapMaxLinearVelocityLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxLinearVelocity"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
placeholder_text = "0.0"
alignment = 2
max_length = 20

[node name="snapMaxAngularVelocity" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxAngularVelocity"]
layout_mode = 2
text = "   snapMaxAngularVelocity"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxAngularVelocity"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="snapMaxAngularVelocityLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxAngularVelocity"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
placeholder_text = "0.0"
alignment = 2
max_length = 20

[node name="snapMaxLinearDistance" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxLinearDistance"]
layout_mode = 2
text = "   snapMaxLinearDistance"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxLinearDistance"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="snapMaxLinearDistanceLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxLinearDistance"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
placeholder_text = "0.0"
alignment = 2
max_length = 20

[node name="snapMaxAngularDistance" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxAngularDistance"]
layout_mode = 2
text = "   snapMaxAngularDistance"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxAngularDistance"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="snapMaxAngularDistanceLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxAngularDistance"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "0.0"
placeholder_text = "0.0"
alignment = 2
max_length = 20

[node name="durationToBlend" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/durationToBlend"]
layout_mode = 2
text = "   durationToBlend"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/durationToBlend"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="durationToBlendLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/durationToBlend"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "1.0"
placeholder_text = "1.0"
alignment = 2
max_length = 20

[node name="animationBlendFraction" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/animationBlendFraction"]
layout_mode = 2
text = "   animationBlendFraction"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/animationBlendFraction"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="animationBlendFractionLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/animationBlendFraction"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "1.0"
placeholder_text = "1.0"
alignment = 2
max_length = 20

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="connection/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="text_changed" from="Name" to="." method="_on_name_text_changed"]
[connection signal="popup_hide" from="DataPopupPanel" to="." method="_on_popup_panel_popup_hide"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/ConfirmDeleteButton" to="." method="_on_confirm_delete_button_pressed"]
[connection signal="value_changed" from="DataPopupPanel/VBoxContainer/BaseNode/nodeIDSpinBox" to="." method="_on_node_id_spin_box_value_changed"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/PaintButton" to="." method="_on_paint_button_pressed"]
[connection signal="toggled" from="DataPopupPanel/VBoxContainer/BaseNode/PinButton" to="." method="_on_pin_button_toggled"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="item_selected" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData/userDataButton" to="." method="_on_user_data_button_item_selected"]
[connection signal="item_selected" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable/enableButton" to="." method="_on_enable_button_item_selected"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/hierarchyGain/hierarchyGainLine" to="." method="_on_hierarchy_gain_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/velocityDamping/velocityDampingLine" to="." method="_on_velocity_damping_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/accelerationGain/accelerationGainLine" to="." method="_on_acceleration_gain_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/velocityGain/velocityGainLine" to="." method="_on_velocity_gain_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/positionGain/positionGainLine" to="." method="_on_position_gain_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/positionMaxLinearVelocity/positionMaxLinearVelocityLine" to="." method="_on_position_max_linear_velocity_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/positionMaxAngularVelocity/positionMaxAngularVelocityLine" to="." method="_on_position_max_angular_velocity_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapGain/snapGainLine" to="." method="_on_snap_gain_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxLinearVelocity/snapMaxLinearVelocityLine" to="." method="_on_snap_max_linear_velocity_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxAngularVelocity/snapMaxAngularVelocityLine" to="." method="_on_snap_max_angular_velocity_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxLinearDistance/snapMaxLinearDistanceLine" to="." method="_on_snap_max_linear_distance_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/snapMaxAngularDistance/snapMaxAngularDistanceLine" to="." method="_on_snap_max_angular_distance_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/durationToBlend/durationToBlendLine" to="." method="_on_duration_to_blend_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/animationBlendFraction/animationBlendFractionLine" to="." method="_on_animation_blend_fraction_line_text_changed"]
